fdo#59881 - sdremote: give up on threaded / UNO usage.

Process incoming commands in the main thread in a Timeout, build
thumbnail / previews there too - to avoid the deadlocks mentioned
in the bug.

(cherry picked from commit 58b05ce98e72fe47bdca02d2dabea20c36a494bf)

Change-Id: I5f5e8d6fbc2e059d4194f72f3e086e1aa87ab2cc
Signed-off-by: Thorsten Behrens <tbehrens@suse.com>