sd/source/ui/remotecontrol/Communicator.cxx
@@ -81,7 +81,7 @@ void Communicator::execute()
         }
         else
         {
-            aReceiver.parseCommand( aCommand );
+            aReceiver.pushCommand( aCommand );
             aCommand.clear();
         }
     }
